[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crosspost-mcp"
version = "0.1.0"
description = "MCP server for cross-posting content to Telegram, Discord, Mastodon, Bluesky, and Reddit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Alex", email = "youremail@example.com" },
]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "atproto>=0.0.50",
    "Mastodon.py>=1.8.0",
    "asyncpraw>=7.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
crosspost-mcp = "crosspost_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crosspost_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
